--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
         <img class="hero-imagen-desarrollador rounded-circle" src="linkedin.jpg" alt="Foto de Victoria">
         <h1>Hola, soy Victoria Trejo</h1>
-        <!--<h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>-->
+        <!--<h2>Desarrollo sitios web y comparto artículos sobre programación.</h2>-->
 
         <!--Animación con JavaScript-->
         <h2 class="text-primary mb-4" id="typewriter"></h2>
@@ -70,7 +70,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Victoria Trejo</h2>
-        <p class="seccion-texto">Creativa, perseverante, determinada, autodidacta, analítica y curiosa, me encanta aprender constantemente y emprender nuevas aventuras, lo que me ha llevado a ser muy organizada con mi tiempo para poder lograr mis objetivos. Me gustaría trabajar con una empresa que promueva el aprendizaje continuo y se preocupe por el bienestar de sus trabajadores.</p>
+        <p class="seccion-texto">Después de estudiar medicina por 3 años y descubrir que no era para mí, encontré una nueva pasión en la programación. Actualmente me estoy preparando para ser Desarrolladora Web Full-Stack en DEV.F y TECNOLOchicas. Tengo conocimientos de HTML, CSS, JavaScript, Bootstrap, Node, React, SQL y Express.</p>
       </div>
     </section>
 
@@ -94,7 +94,7 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Artículos</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p>Comparto artículos relacionados a la tecnología y programación, para inspirar a las mentes curiosas a adentrarse en este mundo. </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">Escribir</span>
               <span class="badge text-bg-primary">Editar</span>
@@ -105,11 +105,11 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Estudiante</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+            <p>Estudiante del Master en Coding en DEV.F y en otros cursos como lo son TECNOLOchicas y BEDU. Aprovechando cada oportunidad, autodidacta. </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">Tecnolochicas PRO</span>
-              <span class="badge text-bg-primary">Desarrollo Web</span>
-              <span class="badge text-bg-primary">Python</span>
+              <span class="badge text-bg-primary">DEV.F</span>
+              <span class="badge text-bg-primary">BEDU</span>
             </div>
           </div>
         </div>
@@ -126,11 +126,11 @@
           <!-- Proyecto 1 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto1.png" alt="Proyecto 1">
+              <img src="imagenes/google.png" alt="Clon de Google">
               <div class="overlay">
-                <p>Proyecto 1</p>
+                <p>Clon de Google</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/victoriatrejocs/Clon-de-Google" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                   <a href="#" target="_blank" rel="noopener noreferrer">
@@ -143,11 +143,11 @@
           <!-- Proyecto 2 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto2.png" alt="Proyecto 1">
+              <img src="imagenes/banca.png" alt="Cajero">
               <div class="overlay">
-                <p>Proyecto 2</p>
+                <p>Cajero</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/victoriatrejocs/Cajero" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                   <a href="#/" target="_blank" rel="noopener noreferrer">
@@ -160,11 +160,11 @@
           <!-- Proyecto 3 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto3.png" alt="Proyecto 1">
+              <img src="imagenes/tienda.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 3</p>
+                <p>Tienda con Bootstrap</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/victoriatrejocs/Tienda" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                   <a href="#/" target="_blank" rel="noopener noreferrer">
@@ -177,11 +177,11 @@
           <!-- Proyecto 4 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyecto4.png" alt="Proyecto 1">
+              <img src="imagenes/got.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>Proyecto 4</p>
+                <p>Personajes de Game Of Thrones</p>
                 <div class="iconos-contenedor">
-                  <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/victoriatrejocs/Game-Of-Thrones" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                   <a href="#" target="_blank" rel="noopener noreferrer">
@@ -243,29 +243,29 @@
           Más recientes
         </div>
         <ul class="list-group list-group-flush">
-          <a href="https://nancynsalazar.medium.com/gu%C3%ADa-r%C3%A1pida-para-construir-tu-portafolio-como-programador-a-9f02daeabb12" target="_blank" rel="noopener noreferrer">
+          <a href="https://medium.com/@markwschaefer/20-entertaining-uses-of-chatgpt-you-never-knew-were-possible-3bc2644d4507" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
-              Guía rápida para construir tu portafolio como programador(a)
+              20 Entertaining Uses of ChatGPT You Never Knew Were Possible
             </li>
           </a>
-          <a href="https://nancynsalazar.medium.com/c%C3%B3mo-ser-un-a-mejor-programador-a-749c1bf98990" target="_blank" rel="noopener noreferrer">
+          <a href="https://medium.com/better-programming/vs-code-shortcuts-to-code-like-youre-playing-a-piano-e5db7b272d1?source=topics_v2---------1-84----------coding-------31---51db7265_754f_42e5_bcaf_a51d6d7f8d2d-------17" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
-              Cómo ser un(a) mejor programador(a)
+              VS Code Shortcuts To Code Like You’re Playing a Piano
             </li>
           </a>
-          <a href="#" target="_blank" rel="noopener noreferrer">
+          <a href="https://javascript.plainenglish.io/15-useful-javascript-tips-814eeba1f4fd?gi=18517d7645e2&source=topics_v2---------5-84----------coding-------31---6fcd7a80_639e_4d10_86a7_8f2383ccc891-------17" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
-              Python leer archivo JSON - cómo cargar JSON desde un archivo y procesar dumps
+              15 Useful JavaScript Tips
             </li>
           </a>
-          <a href="#" target="_blank" rel="noopener noreferrer">
+          <a href="https://medium.com/@s.sankoh/build-a-portfolio-website-from-scratch-e4dee9b51dd5" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
-              Python cómo escribir en un archivo - abrir, leer, escribir y otras funciones de archivos explicadas
+              Build A Portfolio Website From Scratch
             </li>
           </a>
-          <a href="#" target="_blank" rel="noopener noreferrer">
+          <a href="https://medium.com/@raghunathchavva/3-ways-to-add-numbers-in-java-without-using-the-operator-e57034eacc63" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
-              ¿Para qué se usa Python? 10+ usos del lenguaje de programación Python
+              3 Ways to Add Numbers in Java Without Using the + Operator
             </li>
           </a>
         </ul>
@@ -281,7 +281,7 @@
     <!-- Testimonios -->
     <section id="testimonios" class="testimonios seccion-clara">
       <h2 class="seccion-titulo">Testimonios</h2>
-      <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes...</h3>
+      <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes y mentores...</h3>
       
       <!-- Carrusel -->
       <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -334,13 +334,13 @@
         <div class="container text-center rectangulo d-flex justify-content-evenly">
           <div class="row">
             <div class="col-12 col-md-4 seccion-titulo">
-              ¡Hablemos!
+              ¡Mándame un e-mail!
             </div>
             <div class="col-12 col-md-4 descripcion">
               Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.
             </div>
             <div class="col-12 col-md-4">
-              <a href="mailto:janedoe@micorreo.com">
+              <a href="mailto: victoriatrejocs@gmail.com">
                 <button type="button">  
                   Contacto
                   <i class="bi bi-envelope-check-fill"></i>
@@ -357,23 +357,23 @@
       <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
       <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://twitter.com/victoriatrejocs" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-twitter"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/victoriatrejocs" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/victoriatrejocs/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.instagram.com/vicvaporub444/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
         </a>
-        <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+        <a href="mailto: victoriatrejocs@gmail.com" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-      <div class="derechos-de-autor">Creado por Jane Doe (2022) &#169;</div>
+      <div class="derechos-de-autor">Creado por Victoria Trejo (2022) &#169;</div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
