Se actualiza el about me

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Victoria Trejo</h2>
-        <p class="seccion-texto">Después de estudiar medicina por 3 años y descubrir que no era para mí, encontré una nueva pasión en la programación. Actualmente me estoy preparando para ser Desarrolladora Web Full-Stack en DEV.F y TECNOLOchicas. Tengo conocimientos de HTML, CSS, JavaScript, Bootstrap, Node, React, SQL y Express.</p>
+        <p class="seccion-texto">Estudiante de Desarrollo Web Full-Stack. Actualmente soy programadora web en TECNOLOchicas, desarrollo sitios web responsivos y modernos mientras que expando mis habilidades y conocimientos.</p>
       </div>
     </section>
 
