--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <a href="https://github.com/victoriatrejocs/Clon-de-Google" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://victoriatrejocs.github.io/Clon-de-Google/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
